--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -14,7 +14,10 @@
                     <a class="nav-link" routerLink='/messages' routerLinkActive='active'>Messages</a>
                   </li>  
                 </ng-container>
-              </ul>
+                <li class="nav-item">
+                  <a class="nav-link" routerLink='/errors' routerLinkActive='active'>Errors</a>
+                </li>  
+            </ul>
 
               <div class="dropdown" *ngIf="(accountService.currentUser$ | async) as user" dropdown>
                 <a class="dropdown-toggle text-light" dropdownToggle>Welcome {{user.username | titlecase}}</a>
