--- a/client/src/app/lists/lists.component.html
+++ b/client/src/app/lists/lists.component.html
@@ -1,1 +1,46 @@
-<p>lists works!</p>
+<div class="text-center mt-3">
+    <h2>{{predicate === 'liked' ? 'Members I liked' : 'Members who liked me'}}</h2>
+</div>
+
+<div class="container mt-3">
+    <div class="row">
+        <div class="btn-group float-right" name="predicate">
+            <button 
+                type='button'
+                class="btn btn-primary" 
+                name='predicate'
+                btnRadio='liked'
+                (click)='loadLikes()'
+                [(ngModel)]="predicate"
+                >Members I like</button>
+                <button 
+                type='button'
+                class="btn btn-primary" 
+                name='predicate'
+                btnRadio='likedBy'
+                (click)='loadLikes()'
+                [(ngModel)]="predicate"
+                >Members who like me</button>
+        </div>
+    </div>
+
+    <div class="row mt-3">
+        <div *ngFor="let member of members" class="col-2">
+            <app-member-card [member]="member"></app-member-card>
+        </div>
+    </div>
+</div>
+
+<div class="d-flex justify-content-center" *ngIf="pagination">
+    <pagination 
+        [boundaryLinks]="true" 
+        [totalItems]="pagination.totalItems"
+        [itemsPerPage]="pagination.itemsPerPage"
+        [(ngModel)]="pagination.currentPage"
+        (pageChanged)="pageChanged($event)"
+        previousText="&lsaquo;" 
+        nextText="&rsaquo;" 
+        firstText="&laquo;" 
+        lastText="&raquo;">
+    </pagination>
+</div>    
