--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -6,7 +6,7 @@
                 <i class="fa fa-user"></i></button></li>
             <li class="list-inline-item"><button (click)="addLike(member)" class="btn-primary">
                 <i class="fa fa-heart"></i></button></li>
-            <li class="list-inline-item"><button class="btn-primary">
+            <li class="list-inline-item"><button class="btn-primary" routerLink='/members/{{member.username}}' [queryParams]='{tab: 3}'>
                 <i class="fa fa-envelope"></i></button></li>
             </ul>
     </div>
