End of section 16

--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -9,7 +9,7 @@
                 <div>
                     <span class="chat-img float-right">
                         <img 
-                            src="{{message.senderPhotoUrl || './assests/user.png'}}" 
+                            src="{{message.senderPhotoUrl || './assets/user.png'}}" 
                             alt="{{message.senderUsername}}" 
                             class="img-circle rounded-circle">
                     </span>
